--- a/src/app/Components/dash-board/dash-board-ifo/dash-board-ifo.component.html
+++ b/src/app/Components/dash-board/dash-board-ifo/dash-board-ifo.component.html
@@ -1,9 +1,9 @@
 <div class="mt-2">
   <label class="fw-bold">Lista de palabras: </label>
   <select
-   *ngIf="isAdvSearch"
-   #Select size="8" 
-   class="form-select mat-elevation-z1 bg-light">
+    #Select
+    *ngIf="isAdvSearch" class="form-select mat-elevation-z1 bg-light"
+    size="8">
     <option
       class="fw-bold"
       (click)="onSelectWord($event)"
@@ -14,18 +14,20 @@
       {{ item.word }}
     </option>
   </select>
-  <select 
-  *ngIf="!isAdvSearch"
-  #Select size="8" 
-  class="form-select mat-elevation-z1 bg-light">
+  <select
+    #Select
+    *ngIf="!isAdvSearch" class="form-select mat-elevation-z1 bg-light"
+    size="8">
     <option
       class="fw-bold"
       (click)="onSelectWord($event)"
       *ngFor="let item of itemList | duplicate; index as i"
-      [selected]="item.word == currentEntry"
+      [selected]="item.word.includes(currentEntry)"
+
       [value]="item.id"
     >
-      {{ item.word }} | {{ item.pos | json }}
+      {{ item.word }}
+      <!--      | {{ item.pos | json }}-->
     </option>
   </select>
 </div>
