--- a/src/app/Components/dash-board/dash-board-content/dash-board-content.component.css
+++ b/src/app/Components/dash-board/dash-board-content/dash-board-content.component.css
@@ -1,6 +1,7 @@
 .welcome{
   width: 100%;
 }
+
 .example-card{
   background-color: #f1f1f1;
 }
@@ -67,7 +68,7 @@
 }
 
 .btn {
-  height: 50px;
+  /*height: 50px;*/
 }
 
 cdk-virtual-scroll-viewport {
