Fixed xr(Especial Reference) functionality

--- a/src/app/Components/dash-board/dash-board-content/dash-board-content.component.css
+++ b/src/app/Components/dash-board/dash-board-content/dash-board-content.component.css
@@ -78,3 +78,16 @@ cdk-virtual-scroll-viewport {
   flex-direction: column;
 }
 
+.not-found {
+  /*position: absolute;*/
+  /*top: 50px;*/
+  /*left: 50px;*/
+  /*transform: translate(-50%,-50%);*/
+  margin-top: 25%;
+  margin-bottom: 25%;
+}
+
+.not-found-icon {
+  transform: scale(3);
+}
+
