--- a/src/app/Components/dash-board/dash-board-content/dash-board-content.component.html
+++ b/src/app/Components/dash-board/dash-board-content/dash-board-content.component.html
@@ -92,7 +92,10 @@
 </div>
 
 <!-- Initial Content -->
-<div class="mt-3 welcome" *ngIf="!selectClick">
+<div *ngIf="!selectClick"
+     [ngClass]="(otherBoolean | async) ? 'd-none':''"
+     class="mt-3 welcome"
+>
   <div class="card bg-dark text-white p-0" [@fade]>
     <img
       class="card-img card-opacity"
@@ -100,7 +103,7 @@
       alt=""
     />
     <div class="card-img-overlay p-0">
-      <h2 class="card-title">Reseña del Diccionario</h2>
+      <h2 class="card-title text-center">Reseña del Diccionario</h2>
       <p class="card-text fs-5 fst-italic">
         Las ediciones electrónicas del Diccionario Básico Escolar son producto
         de la colaboración entre el Centro de Lingüística Aplicada de Santiago
@@ -113,8 +116,20 @@
   </div>
 </div>
 
+<div *ngIf="(otherBoolean | async)" class="mt-3 welcome ">
+  <div class="card p-0">
+    <div class="not-found d-flex justify-content-center">
+      <mat-icon class="not-found-icon" svgIcon="warning"></mat-icon>
+      <h2>Not Found</h2>
+    </div>
+  </div>
+</div>
+
 <!-- Search Content -->
-<div class="welcome mt-3" *ngIf="selectClick">
+<div *ngIf="selectClick"
+     [ngClass]="(otherBoolean | async) ? 'd-none':''"
+     class="welcome mt-3"
+>
   <div>
     <cdk-virtual-scroll-viewport itemSize="5">
       <mat-card
@@ -126,12 +141,14 @@
           <div class="d-flex justify-content-center align-items-center">
             <span class="fw-bold">{{ word.palabra.form.orthography }}</span>
           </div>
-          <div class="d-flex mx-1 justify-content-center align-items-center">
+          <div class="d-flex mx-1 justify-content-center align-items-center ">
             <span
               *ngFor="let gG of word.grupoGramatical; index as gIndex"
             >
-              <span *ngIf="gG.type !=='itype'" [matTooltip]="getGramaticalTooltip(gG.value)">{{ gG.value }} <span
-                *ngIf="gIndex !== word.grupoGramatical.length -  1" class="p-1"> y </span></span></span>
+              <span
+                [matTooltip]="getGramaticalTooltip(gG.value)"
+              >{{gG.value}} <span *ngIf="gIndex+1 !== word.grupoGramatical.length"> y </span></span>
+            </span>
           </div>
           <div
             class="p-1 d-flex justify-content-center"
@@ -196,7 +213,6 @@
               >
                 {{notes.textos}}
               </span>
-
             </span>
           </div>
         </div>
@@ -225,25 +241,30 @@
         <!--  >-->
         <!--    {{item.textos}}</span>-->
 
-        <div *ngFor="let item of word.senses; index as is">
+        <div *ngFor="let item of word.senses; index as is" class="px-3">
           <div class="d-flex">
-            <div *ngFor="let itemSrc of item.senseSrc" class="d-flex">
+            <div *ngIf="item.senseSrc.length===0" style="width: 24px; height: 24px;"></div>
+            <div *ngFor="let itemSrc of item.senseSrc" class="d-flex align-items-start">
               <button
                 (click)="onOpenWordImage(itemSrc.url)"
-                *ngIf="is + 1 == itemSrc.id && itemSrc.type === 'img'"
-                class="border-0"
+                *ngIf="is + 1 == itemSrc.id && itemSrc.type === 'img'; else showbutton"
+                class="border-0 p-0"
               >
                 <mat-icon color="primary" matPrefix svgIcon="image"></mat-icon>
               </button>
               <button
                 (click)="onOpenWordVideo(itemSrc.url)"
-                *ngIf="is + 1 == itemSrc.id && itemSrc.type === 'video'"
-                class="border-0"
+                *ngIf="is + 1 == itemSrc.id && itemSrc.type === 'video'; else showbutton"
+                class="border-0 p-0"
                 matTooltip="Play Video"
               >
                 <mat-icon color="primary" matPrefix svgIcon="play_circle"></mat-icon>
               </button>
             </div>
+            <ng-template #showbutton>
+              <div style="width: 24px; height: 24px;"></div>
+            </ng-template>
+
             &nbsp;&nbsp;&nbsp;&nbsp;
             <span *ngIf="word.senses.length !== 1" class="fw-bolder px-1">{{ is + 1 }} </span>
             &nbsp; &nbsp;
@@ -282,6 +303,18 @@
                 <span *ngIf="item1.textos.endsWith('.')"><br/></span>
               </span>
               </div>
+              <div *ngFor="let itemXr of item.referenciasCruzadas;" class="">
+                <span>{{itemXr.lbl}} </span>
+                <span *ngFor="let itemx of itemXr.ref; index as x">
+                  <span
+                    (click)="onLemmaWord(itemx.id)"
+                    style="cursor: pointer"
+                  ><span class="link-primary text-decoration-underline">{{itemx.word}}</span><span
+                    [ngClass]="x+1 === itemXr.ref.length ? 'd-none':'text-decoration-none'"> , </span></span>
+                </span>
+
+
+              </div>
               <div *ngFor="let itemRe of item.entradasRelacionadas" class="">
                 <span><br></span>
                 <span>// {{itemRe.myForms.lbl}} <span class="fw-bolder">{{itemRe.myForms.orthography}}</span></span>
@@ -310,10 +343,11 @@
                 <span *ngIf="itemReSenseEx.textos.endsWith('.')"><br/></span>
               </span>
               </div>
-              <hr>
             </div>
           </div>
+          <br>
         </div>
+
         &nbsp;
         <div class="d-flex">
           <span>{{ word.palabra.form.syllable }}</span>
