Fixed gramatical group in entry orth

--- a/src/app/Components/dash-board/dash-board-content/dash-board-content.component.html
+++ b/src/app/Components/dash-board/dash-board-content/dash-board-content.component.html
@@ -147,7 +147,7 @@
             >
               <span
                 [matTooltip]="getGramaticalTooltip(gG.value)"
-              >{{gG.value}} <span *ngIf="gIndex+1 !== word.grupoGramatical.length"> y </span></span>
+              >{{gG.value}} <span *ngIf="gIndex+1 !== word.grupoGramatical.length"> y &nbsp;</span></span>
             </span>
           </div>
           <div
