--- a/src/app/Components/dash-board/dash-board-header/dash-board-header.component.html
+++ b/src/app/Components/dash-board/dash-board-header/dash-board-header.component.html
@@ -17,6 +17,7 @@
     />
     <span
       matTooltip="Click aquí para buscar"
+      [matTooltipClass]="'bg-primary fs-6'"
       class="input-group-text btn btn-primary"
     >
       <mat-icon
