--- a/src/app/Components/dash-board/dash-board-content/dash-board-content.component.html
+++ b/src/app/Components/dash-board/dash-board-content/dash-board-content.component.html
@@ -143,6 +143,12 @@
           &nbsp;
           <div class="d-flex justify-content-center align-items-center">
             <span class="fw-bold">{{ word.palabra.form.orthography }}</span>
+            <!--            <span *ngFor="let letter of onCharWordSplitter(word.palabra.form.orthography); index as charIndex">-->
+            <!--              <span-->
+            <!--                [ngClass]="onPositionErrorProcess(charIndex, word.palabra.form.positionError) ? '':'text-primary'"-->
+            <!--              >{{letter}}</span>-->
+            <!--            </span>-->
+
           </div>
           <div class="d-flex mx-1 justify-content-center align-items-center ">
             <span
@@ -256,7 +262,6 @@
           <div class="d-flex">
             <div *ngIf="item.senseSrc.length===0" style="width: 48px;"></div>
             <div *ngFor="let itemSrc of item.senseSrc" class="d-flex align-items-start">
-              #hola
               <button
                 (click)="onOpenWordImage(itemSrc.url)"
                 *ngIf="is + 1 == itemSrc.id && itemSrc.type === 'img'"
