--- a/src/app/Components/dash-board/dash-board-header/dash-board-header.component.html
+++ b/src/app/Components/dash-board/dash-board-header/dash-board-header.component.html
@@ -13,7 +13,7 @@
       [value]="snapshotWord === undefined ? '' : snapshotWord"
       [formControl]="filterInput"
       autofocus
-      pattern="[A-Za-z ]*"
+      pattern="^[a-zA-Z\u00C0-\u017F]+$"
     />
     <span
       matTooltip="Click aquí para buscar"
