--- a/src/app/Components/dash-board/dash-board-content/dash-board-content.component.css
+++ b/src/app/Components/dash-board/dash-board-content/dash-board-content.component.css
@@ -84,9 +84,13 @@ cdk-virtual-scroll-viewport {
   /*left: 50px;*/
   /*transform: translate(-50%,-50%);*/
   margin-top: 25%;
-  margin-bottom: 25%;
+  margin-bottom: 18%;
+}
+
+.bg-color {
+  background: #939191;
 }
 
 .not-found-icon {
-  transform: scale(3);
+  transform: scale(1);
 }
