--- a/src/app/Components/modals/video-modal/video-modal.component.html
+++ b/src/app/Components/modals/video-modal/video-modal.component.html
@@ -4,6 +4,16 @@
       <mat-icon class="mb-1" svgIcon="close"></mat-icon>
     </button>
   </div>
-  <video class="container-fluid" [width]="'640'" [height]="'480'" [autoplay]="true" [src]="videoSrc"  controls="controls"></video>
-</div>
+ <video class="container-fluid" [width]="'640'" [height]="'480'" [autoplay]="true" [src]="videoSrc"  controls="controls"></video>
+<p>videosSrc</p>
 
+<!-- <div class="container-fluid">
+    <object  type="application/x-shockwave-flash" [data]="data" width="640" height="480">
+      <param name="movie" [value]="data" />
+      <param name="autoplay" value="true" />
+      <param name="quality" value="high" />
+      <param name="wmode" value="opaque" />
+      <param name="allowFullScreen" value="true" />
+    </object>
+  </div>-->
+  </div>
