--- a/src/app/Components/alphabeth/alphabeth.component.html
+++ b/src/app/Components/alphabeth/alphabeth.component.html
@@ -1,8 +1,9 @@
 
-    <div class="table-responsive">
+    <div  class="table-responsive">
       <table class="table text-center">
         <thead class="bg-dark bg-gradient">
-        <tr #trow (click)="onTestTable($event)">
+        <tr #trow (click)="onTestTable($event)"
+       >
           <td>A</td>
           <td>B</td>
           <td>C</td>
@@ -34,4 +35,3 @@
         </thead>
       </table>
     </div>
-
