--- a/src/app/Components/dash-board/dash-board-header/dash-board-header.component.html
+++ b/src/app/Components/dash-board/dash-board-header/dash-board-header.component.html
@@ -13,7 +13,7 @@
       [value]="snapshotWord === undefined ? '' : snapshotWord"
       [formControl]="filterInput"
       autofocus
-      pattern="^[a-zA-Z\u00C0-\u017F]+$"
+      pattern="^[a-zA-Z\u00C0-\u017F|-]+$"
     />
     <span
       matTooltip="Click aquí para buscar"
@@ -45,7 +45,7 @@
 <div class="mt-2">
   <label class="fw-bold">Modos de búsqueda: </label>
   <select (change)="onSelectMode($event)" class="form-select mat-elevation-z1">
-    <option value="reg0" selected>------------------------------------</option>
+    <option value="reg0" selected>normal</option>
     <option value="reg1">comienza por</option>
     <option value="reg2">contiene</option>
     <option value="reg3">termina en</option>
